# ffmpeg-audio

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  biome.json  deno.jsonc  rustfmt.toml
.cargo/: config.toml
.github/workflows/: ci.yml  update-ffmpeg.yml
crates/ffmpeg_audio/: Cargo.toml
crates/ffmpeg_audio/examples/: metadata.rs  play.rs
crates/ffmpeg_audio/src/: decoder.rs  demuxer.rs  engine.rs  error.rs  format.rs  frame.rs  io.rs  lib.rs  log.rs  resampler.rs  swr.rs  time.rs
crates/ffmpeg_audio/src/core/: format.rs  frame.rs  http.rs  layout.rs  mod.rs  time.rs
crates/ffmpeg_audio/src/decode/: decoder.rs  demuxer.rs  engine.rs  mod.rs
crates/ffmpeg_audio/src/reader/: mod.rs  pipeline.rs  scan.rs  seek.rs
crates/ffmpeg_audio/src/resample/: resampler.rs  swr.rs
crates/ffmpeg_audio/tests/: integration_test.rs  server.go
crates/ffmpeg_audio_sys/: Cargo.toml  README.md  build.rs
crates/ffmpeg_audio_sys/src/: bindings.rs  consts.rs  lib.rs
crates/ffmpeg_wasm/: Cargo.toml  build.rs  library_ffmpeg.js
crates/ffmpeg_wasm/src/: main.rs
crates/soundtouch/: Cargo.toml
crates/soundtouch/src/: lib.rs
scripts/: extract_slim.py  extract_slim.ts  generate_config.sh  generate_config.ts
web/: .gitignore  deno.jsonc  index.html  package.json  tsconfig.json
web/scripts/: build-wasm.ts
web/src/: main.ts  ui.ts
web/src/audio-core/: engine.ts  index.ts  types.ts
web/src/audio-core/core/: audio-renderer.ts  worker-client.ts
web/src/audio-core/queue/: index.ts
web/src/audio-core/worker/: decoder.worker.ts  types.ts
(+5 files in other folders)
