[package]
name = "ffmpeg_audio"
version = "0.1.0"
edition = "2024"

[features]
default = ["tracing"]
tracing = ["dep:tracing"]

[dependencies]
thiserror = "2"
libc = "0.2"
ffmpeg_audio_sys = { path = "../ffmpeg_audio_sys" }
tracing = { version = "0.1", optional = true }

[dev-dependencies]
anyhow = "1"
ringbuf = "0.5"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
cpal = "0.18"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

cast_sign_loss = "allow"
cast_possible_wrap = "allow"
cast_possible_truncation = "allow"
cast_precision_loss = "allow"

missing_errors_doc = "allow"
doc_markdown = "allow"
